--- a/skeletons/catalog-info/catalog-info.yaml
+++ b/skeletons/catalog-info/catalog-info.yaml
@@ -43,17 +43,15 @@ metadata:
     quay.io/repository-slug: ${{ values.imageOrganization }}/${{ values.imageName }}
     {%- endif %}
   links:
-    - url: https://devspaces.apps.cluster-h6fh7.sandbox550.opentlc.com/#https://anattama@dev.azure.com/anattama/Developer%20Hub%20Demo/_git/${{ values.repoName }}
+    - url: https://devspaces${{values.cluster}}/#https://servnowtest@dev.azure.com/servnowtest/Developer%20Hub%20Demo/_git/${{ values.repoName }}
       title: OpenShift Dev Spaces (VS Code editor)
       icon: web
-    - url: https://${{ values.repoName }}-gateway-${{ values.repoName }}-dev.apps.cluster-h6fh7.sandbox550.opentlc.com/api/hello
+    - url: https://${{ values.repoName }}-gateway-${{ values.repoName }}-dev${{values.cluster}}/api/hello
       title: Deployed Application
       icon: web  
   tags:
     - java
-    - spring-boot
-    - openshift-service-mesh
-    - azure-pipelines-ci
+    - azure
     - argocd-gitops
     - azure-repos
 spec:
