--- a/templates/github/spring-boot-backend/skeleton/azure-pipelines.yaml
+++ b/templates/github/spring-boot-backend/skeleton/azure-pipelines.yaml
@@ -76,8 +76,8 @@ stages:
             inputs:
               targetType: inline
               script: |       
-                  git config --local user.email "73549783+arunhari82@users.noreply.github.com"
-                  git config --local user.name "arunhari82"
+                  git config --local user.email "123506780+DLrh@users.noreply.github.com"
+                  git config --local user.name "dlrh"
 
           - task: Bash@3
             displayName: Commit and Push Gitops
