--- a/templates/github/spring-boot-backend/template.yaml
+++ b/templates/github/spring-boot-backend/template.yaml
@@ -1,26 +1,28 @@
 apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
-  name: azure-spring-boot-backend-template
-  title: Azure Devops Spring Boot With ServiceMesh template
-  description: Create a starter Spring Boot backend application with a Azure CI pipeline, Argo CD Gitops, Service Mesh 
+  name: pepsico-template
+  title: Pepsico Azure Devops template
+  description: Create a starter application with Azure CI pipeline, Argo CD Gitops
   tags:
-    - service-mesh
-    - spring-boot
-    - java
-    - maven
+    - service-now
+    - pepsico
+    - pepsico-dev-flow
     - azure-pipelines-ci
     - argocd-gitops
     - azure-repos
+    - tekton
+    - sonarqube
 spec:
   owner: user:user1
   system: janus-idp
   type: service
 
   parameters:
-    - title: Provide information about the new component
+    - title: Provide Dev Flow Variables 
       required:
         - componentId
+        - approvalcode
         - orgName
         - repoName
         - owner
@@ -33,6 +35,9 @@ spec:
           description: Unique name for this app component
           default: my-springboot-app
           ui:field: EntityNamePicker
+        approvalcode:
+          title: Service Now Approval Code
+          type: string 
         orgName:
           title: Azure Organization Name
           type: string
@@ -45,6 +50,26 @@ spec:
           title: Description
           type: string
           description: Help others understand what this component is for
+        artifact_id:
+          title: Artifact Id
+          type: string
+          default: pepsico-app
+          description: Maven Artifact Id
+        group_id:
+          title: Group Id
+          type: string
+          default: pepsico-mvn
+          description: Maven Group Id
+        java_package_name:
+          title: Package Name
+          default: com.pepsico
+          type: string
+          description: Name for the package. eg (com.pepsico.blah)
+        description:
+          title: Description
+          type: string
+          description: Help others understand what this website is for.
+          default: A pepsico app
         owner:
           title: Git Owner
           type: string
@@ -72,7 +97,15 @@ spec:
         - groupId
         - artifactId
         - javaPackageName
+        - image_registry
       properties:
+        image_registry:
+          title: Image Registry
+          type: string
+          enum:
+            - Openshift
+            - Quay
+            - JFrog
         groupId:
           title: Group ID
           type: string
@@ -92,11 +125,7 @@ spec:
     - title: Provide information about the CI method
       required:
         - ci
-        # - token
-      properties:
-        # token:
-        #   title: Azure Personal Access Token to Connect to Repo
-        #   type: string     
+      properties:  
         ci:
           title: Select a CI method
           type: string
@@ -168,6 +197,13 @@ spec:
                           default: 'redhat_na_ssa'
 
   steps:
+    - id: snowretrieve
+      name: Verify ServiceNow Approval
+      action: servicenow:now:table:retrieveRecord
+      input:
+        tableName: u_employeename
+        sysId: "${{ parameters.approvalcode }}"
+
     - id: sourceCodeTemplate
       name: Generating the Source Code Component
       action: fetch:template
@@ -182,6 +218,15 @@ spec:
           artifactId: ${{ parameters.artifactId }}
           javaPackageName: ${{ parameters.javaPackageName }}
           sourceControl: dev.azure.com # If using a Hosted Enterprise GithHub replace with your internal domain
+          component_id: ${{ parameters.component_id }}
+          namespace: ${{ parameters.component_id }}-dev
+          group_id: ${{ parameters.group_id }}
+          owner: ${{ user.entity.metadata.name }}
+          cluster: .apps.cluster-qmdjh.qmdjh.sandbox1439.opentlc.com
+          host: ${{ parameters.repo.host }}
+          destination: ${{ parameters.repo.owner }}/${{ parameters.component_id }}
+          quay_destination: ${{ parameters.image_organization}}/${{ parameters.component_id }}
+          verify_commits: ${{ parameters.repo.verify_commits }}
 
     - id: catalogTemplate
       name: Generating the Catalog Info Component
@@ -212,8 +257,8 @@ spec:
         repoUrl: dev.azure.com?repo=${{ parameters.repoName }}&organization=${{ parameters.orgName }}&owner=Developer%20Hub%20Demo
         description: ${{ parameters.description }}
         defaultBranch: main
-        gitAuthorName: "Arun Hariharan"
-        gitAuthorEmail: "anattama@redhat.com"
+        gitAuthorName: "PepsiCo Dev"
+        gitAuthorEmail: "dlinnema@redhat.com"
 
     - id: createPipeline
       name: Configuring Azure Pipeline
@@ -227,7 +272,7 @@ spec:
         repositoryName: ${{ parameters.repoName }}
 
     - id: register
-      name: Registering the Catalog Info Component
+      name: Registering the Catalog
       action: catalog:register
       input:
         repoContentsUrl: ${{ steps.publish.output.repoContentsUrl }}
@@ -250,8 +295,11 @@ spec:
           image_host: ${{ parameters.image_host }}
           image_organization: ${{ parameters.image_organization }}
           image_name: ${{ parameters.artifactId }}
+          image_tag: ${{ parameters.image_tag }}
           port: ${{ parameters.port }}
           token: ${{ parameters.token }}
+          user: ${{ user.entity.metadata.name }}
+          verify_commits: ${{ parameters.repo.verify_commits }}
         targetPath: ./tenant-gitops
 
     - id: publish-gitops
@@ -276,9 +324,48 @@ spec:
         repoUrl:  https://${{ parameters.orgName }}@dev.azure.com/${{ parameters.orgName }}/Developer%20Hub%20Demo/_git/${{ parameters.repoName }}-gitops
         path: "argocd/"
 
+    - id: sonarq
+      name: Enabling SonarQube
+      action: roadiehq:utils:sleep
+      input:
+        amount: 1
+
+    - id: argocd-verification
+      name: ARGOCD Verification
+      action: debug:log
+      input:
+        message: repo  https://${{ parameters.repo.host }}/${{ parameters.repo.owner }}/${{ parameters.component_id }}-gitops.git
+      
+
+    - id: provison pipeline
+      name: Provision Pipeline 
+      action: roadiehq:utils:sleep
+      input:
+        amount: 1
+    
+    - id: gitlab-verification
+      name: Gitlab Verification
+      action: debug:log
+      input:
+        message: Your Code is located at dev.azure.com?repo=${{ parameters.repoName }}-gitops&organization=${{ parameters.orgName }}&owner=Developer%20Hub%20Demo
+        
+    - id: pipeline-verification
+      name: Pipeline Verification
+      action: debug:log
+      input:
+        message: Pipeline Provisioned with azure-${{ parameters.repoName }}-pipeline
+
+    - id: reg-verification
+      name: Registry Verification
+      action: debug:log
+      input:
+        message: Selected Image Registry is ${{ parameters.image_registry }}
+
   output:
     links:
-      - title: Open the Source Code Repository
+      - title: Service Now Approval Code
+        content: Flow Approved with this code ID $${{ steps.snowretrieve.output.result.sys_id }}
+      - title: Azure Source Code Repository
         url: ${{ steps.publish.output.remoteUrl }}
       - title: Open the Catalog Info Component
         icon: catalog
