--- a/templates/pepsico/pepsicodevflow.yaml
+++ b/templates/pepsico/pepsicodevflow.yaml
@@ -2,8 +2,8 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: pepsico-dev-template
-  title: Pepsico Dev Flow template 1.1
-  description: The Pepsico Dev Flow
+  title: Pepsico Dev Flow template 1.2
+  description: The Pepsico Dev Flow 2
   tags:
     - service-now
     - pepsico
