--- a/templates/github/spring-boot-backend/template.yaml
+++ b/templates/github/spring-boot-backend/template.yaml
@@ -64,11 +64,11 @@ spec:
           title: Package Name
           default: com.pepsico1
           type: string
-          description: Name for the package.
+          description: Name for the package
         description:
           title: Description
           type: string
-          description: Help others understand what this website is for.
+          description: Help others understand what this website is for
           default: A pepsico app
         owner:
           title: Git Owner
