--- a/templates/github/spring-boot-backend/template.yaml
+++ b/templates/github/spring-boot-backend/template.yaml
@@ -66,7 +66,7 @@ spec:
           type: string
           description: Name the package
         description:
-          title: Description
+          title: Description1
           type: string
           description: Help others understand what this website is for
           default: A pepsico app
