--- a/templates/github/spring-boot-backend/template.yaml
+++ b/templates/github/spring-boot-backend/template.yaml
@@ -2,7 +2,7 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: pepsico-template1
-  title: Pepsico Azure Devops template
+  title: Pepsico Azure Devops template 1.2
   description: Create a starter application with Azure CI pipeline, Argo CD Gitops
   tags:
     - service-now
@@ -65,11 +65,6 @@ spec:
           default: com.pepsico1
           type: string
           description: Name the package
-        description:
-          title: Description1
-          type: string
-          description: Help others understand what this website is for
-          default: A pepsico app
         owner:
           title: Git Owner
           type: string
